--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@
 .form{
     flex-direction: column;
     /* background-color: red; */
-    padding:50px;
+    padding:0;
     width:600px;
     /* background-color: blue; */
   
@@ -185,4 +185,100 @@ border:1px solid #d2d2d2;
 
     background-color:#BCBDC2;
   
+}
+
+
+@media screen and (max-width:600px){
+
+    .top{
+        display: flex;
+        flex-direction:column;
+    }
+    .main{
+        background-color:red;
+        height:100%;
+        width:100%;
+        padding:20px;
+        margin-bottom:0px;
+    }
+    
+    .project{
+        width:100%;
+        display:flex;
+        height:100%; 
+    }
+
+    .left{
+       display: none;
+    }
+    
+.right{
+    width:100%;
+    display:block;
+    background-color:transparent;
+  
+}
+    .form{
+        width:auto;
+        background-color: purple;
+    }
+    
+    .form_label{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    label{
+        display: flex;
+        justify-content: start;
+        margin-top:40px;
+        align-items: center;
+        font-size:14px;
+    }
+    
+    input{
+        margin-top:6px;
+        border:none;
+        background:green;
+        font-size: 14px;
+        margin-left:0;
+        
+    }
+    
+    input:focus{
+    border:1px solid #d2d2d2;
+    }
+    
+    ::placeholder{
+        color:#0C0C0D;
+    }
+    
+    .bottom{
+      align-self: center;
+      margin-top: 20px;  
+    }
+    
+    .button_right{
+      background-color:#0C0C0D;
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin-right:0px;
+      border-radius: 5px;
+      margin-left:0px;
+       
+    }
+    
+    .button_right:hover{
+     background-color:#7B7C82;
+      border: none;
+      color: white;
+    
+    }
+
+
 }
