--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ border:1px solid #d2d2d2;
     }
     .main{
         background-color:red;
-        height:100%;
+        height:100vh;
         width:100%;
         padding:20px;
         margin-bottom:0px;
