--- a/src/App.css
+++ b/src/App.css
@@ -30,34 +30,27 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-   
+    padding:20px;
 }
 
 
 .avatar{
-   /* outline: 2px solid black; */
-   
    background-size: cover; 
    height:180px;
    width:180px;
-  
    margin-bottom:80px;
 
     
 }
 
 .text{
-    /* border:2px solid black; */
     margin-bottom:15px;
-    /* color:#fff; */
+    text-align: center;
 }
 
 .paragraph{
-    /* border:2px solid black; */
     margin-bottom:40px;
     text-align: center;
-    /* color:#fff; */
-
 }
 
 .icon{
@@ -81,9 +74,9 @@
     align-items:center;
     flex: 2;
      background-color:white; 
-     /* background-color: salmon; */
     border-radius: 0px 30px 30px 0px;
     flex-direction: column;
+    padding:20px;
 }
 
 .form{
@@ -154,6 +147,7 @@ border:1px solid #d2d2d2;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  margin-top:20px;
   margin-right:20px;
   border-radius: 5px;
   margin-left:100px;
